# MtSparkedCpp

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt
Interop/: CMakeLists.txt
Interop/include/mtsparked/models/: card.h  deck.h  dollarValue.h
Interop/include/mtsparked/services/: costlookup.h  fileprovider.h  formatter.h
Interop/include/mtsparked/utils/: compiletimestring.h  erasedcontainer.h
Interop/src/mtsparked/models/: card.cpp
Services/: CMakeLists.txt
Services/CubeParser/: CMakeLists.txt
Services/Formatter/: CMakeLists.txt
Services/Formatter/Col2/: CMakeLists.txt
Services/Formatter/Dec/: CMakeLists.txt
Services/Formatter/JDec/: CMakeLists.txt
Services/Formatter/YDec/: CMakeLists.txt
Services/PlatformSpecific/: CMakeLists.txt
Services/PlatformSpecific/Android/: CMakeLists.txt
Services/PlatformSpecific/Android/FileProvider/: CMakeLists.txt
Services/PlatformSpecific/Linux/: CMakeLists.txt
Services/PlatformSpecific/Linux/FileProvider/: CMakeLists.txt
Services/PlatformSpecific/Mac/: CMakeLists.txt
Services/PlatformSpecific/Mac/FileProvider/: CMakeLists.txt
Services/PlatformSpecific/RestApi/: CMakeLists.txt
Services/PlatformSpecific/RestApi/FileProvider/: CMakeList.txt  CMakeLists.txt
Services/PlatformSpecific/WebAssembly/: CMakeLists.txt
Services/PlatformSpecific/WebAssembly/FileProvider/: CMakeLists.txt
Services/PlatformSpecific/Windows/: CMakeLists.txt
Services/PlatformSpecific/Windows/FileProvider/: CMakeLists.txt
Services/PlatformSpecific/iOS/: CMakeLists.txt
Services/PlatformSpecific/iOS/FileProvider/: CMakeLists.txt
Services/Providers/: CMakeLists.txt
Services/Providers/CouchBaseLiteProvider/: CMakeLists.txt
Services/Providers/RestApiProvider/: CMakeLists.txt
Services/TCGPlayerCosts/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Interop/: CMakeLists.txt
Tests/Services/: CMakeLists.txt
Tests/Services/CubeParser/: CMakeLists.txt
Tests/Services/Formatter/: CMakeLists.txt
Tests/Services/Formatter/Col2/: CMakeLists.txt
Tests/Services/Formatter/Dec/: CMakeLists.txt
Tests/Services/Formatter/JDec/: CMakeLists.txt
Tests/Services/Formatter/YDec/: CMakeLists.txt
Tests/Services/PlatformSpecific/: CMakeLists.txt
Tests/Services/PlatformSpecific/Android/: CMakeLists.txt
Tests/Services/PlatformSpecific/Android/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/Linux/: CMakeLists.txt
Tests/Services/PlatformSpecific/Linux/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/Mac/: CMakeLists.txt
Tests/Services/PlatformSpecific/Mac/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/RestApi/: CMakeLists.txt
Tests/Services/PlatformSpecific/RestApi/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/WebAssembly/: CMakeLists.txt
Tests/Services/PlatformSpecific/WebAssembly/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/Windows/: CMakeLists.txt
Tests/Services/PlatformSpecific/Windows/FileProvider/: CMakeLists.txt
Tests/Services/PlatformSpecific/iOS/: CMakeLists.txt
Tests/Services/PlatformSpecific/iOS/FileProvider/: CMakeLists.txt
Tests/Services/Providers/: CMakeLists.txt
Tests/Services/Providers/CouchBaseLiteProvider/: CMakeLists.txt
Tests/Services/Providers/RestApiProvider/: CMakeLists.txt
Tests/Services/TCGPlayerCosts/: CMakeLists.txt
Tests/Tools/: CMakeLists.txt
Tests/Tools/UpdateDatabase/: CMakeLists.txt
Tests/UI/: CMakeLists.txt
Tests/UI/Qt/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/UpdateDatabase/: CMakeLists.txt
Tools/UpdateDatabase/src/: main.cpp  updateDatabase.cpp
UI/: CMakeLists.txt
UI/Qt/: CMakeLists.txt
UI/Qt/src/: main.cpp  mainwindow.cpp
