cmake_minimum_required(VERSION 3.14)

project(MtSparked_Services)

option(ENABLE_PROVIDERS "Enable using the query provider plugin libraries." ON)
option(ENABLE_CUBE_PARSER "Enable the Cube Parser plugin library for generating packs." ON)
option(ENABLE_TCGPLAYER_COSTS "Enable using TCGPlayer to gather cost data." ON)
option(ENABLE_FORMATTER "Enable the Formatter plugin libraries." ON)
option(ENABLE_PLATFORMSPECIFIC "Enable the platform specific plugin libraries." ON)

if(ENABLE_CUBE_PARSER)
    add_subdirectory(CubeParser)
endif()
if(ENABLE_TCGPLAYER_COSTS)
    add_subdirectory(TCGPlayerCosts)
endif()
if(ENABLE_FORMATTER)
    add_subdirectory(Formatter)
endif()
if(ENABLE_PLATFORMSPECIFIC)
    add_subdirectory(PlatformSpecific)
endif()
if(ENABLE_PROVIDERS)
    add_subdirectory(Providers)
endif()
